src/test/ui/async-await/issues/issue-63388-1.nll.stderr
error: lifetime may not live long enough
  --> $DIR/issue-63388-1.rs:13:5
   |
LL |       async fn do_sth<'a>(
   |                       -- lifetime `'a` defined here
LL |           &'a self, foo: &dyn Foo
   |                          - let's call the lifetime of this reference `'1`
LL |       ) -> &dyn Foo
LL | /     {
LL | |         foo
LL | |     }
   | |_____^ associated function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'1`

error: aborting due to previous error

